# KommuneFlow-AI

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml
apps/api/: Dockerfile  README.md  package.json  prisma.config.ts
apps/etl/: README.md  pyproject.toml
apps/etl/kommuneflow_elt/: __init__.py  cli.py  config.py  db.py  extract.py  load.py  logging.py  models.py  quality.py  ssb_import.py  transform.py
apps/etl/tests/: test_cli.py  test_db.py  test_extract.py  test_load_idempotency.py  test_quality.py  test_ssb_import.py  test_transform.py
apps/web/: Dockerfile  README.md  (+4 more)
deploy/: Caddyfile
docs/: 00_DOCUMENTATION_INDEX.md  01_PRODUCT_REQUIREMENTS.md  02_DOMAIN_MODEL.md  03_SECURITY_AND_PRIVACY.md  04_AI_GOVERNANCE.md  05_TECH_STACK_AND_ARCHITECTURE.md  06_TESTING_STRATEGY.md  07_DEPLOYMENT_HETZNER.md  08_IMPLEMENTATION_ROADMAP.md  09_DEFINITION_OF_DONE.md  10_DEVELOPMENT_PLAN.md  10_OBSERVABILITY_AND_OPERATIONS.md  11_IMPLEMENTATION_CHECKLIST.md  11_SECURITY_TEST_PLAN.md  12_PROFESSIONAL_QUALITY_BAR.md  13_DEVELOPMENT_PLAN.md  14_IMPLEMENTATION_CHECKLIST.md  15_PROFESSIONAL_UPGRADE_TRACKER.md  API_REFERENCE.md  AZURE_FABRIC_EXTENSION.md  DEMO_SCRIPT.md  RUNBOOK.md  SCREENSHOTS.md  VERIFICATION_LOG.md  observability.md
scripts/: backup-postgres.sh  backup-uploads.sh  capture-demo-screenshots.mjs  dev-start.ps1  dev-status.ps1  dev-stop.ps1  restore-postgres.sh  smoke-test.sh
(+210 files in other folders)
